--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "engines": {
     "node": "16.x",
-    "npm": "8.1.2"
+    "npm": "8.1.2",
+    "HTML" : "HTML 5",
+    "CSS": "CSS3"
   }
 }
